# slon

./: commands
android/Slon/: settings.gradle.kts
android/Slon/app/: build.gradle.kts
android/Slon/app/src/main/: AndroidManifest.xml
android/Slon/gradle/wrapper/: gradle-wrapper.properties
board/esp32_board/: #auto_saved_files#  esp32_board.kicad_pcb  esp32_board.kicad_prl  esp32_board.kicad_pro  esp32_board.kicad_sch  fp-info-cache  fp-lib-table  slon_modules.bak  slon_modules.kicad_sym  sym-lib-table  ~esp32_board.kicad_sch.lck
board/esp32_board/dxf/: esp32_board-B_Cu.dxf  esp32_board-B_Mask.dxf  esp32_board-Edge_Cuts.dxf  esp32_board-F_Cu.dxf  esp32_board-F_Silkscreen.dxf
board/esp32_board/gbr/: esp32_board-B_Cu.gbr  esp32_board-B_Mask.gbr  esp32_board-B_Paste.gbr  esp32_board-B_Silkscreen.gbr  esp32_board-Edge_Cuts.gbr  esp32_board-F_Cu.gbr  esp32_board-F_Mask.gbr  esp32_board-F_Paste.gbr  esp32_board-F_Silkscreen.gbr  esp32_board-job.gbrjob
board/esp32_board/slon_modules.pretty/: PinHeader_1x19_P2.54mm_Vertical.kicad_mod  compass.kicad_mod  gps.kicad_mod  r.kicad_mod  relay.kicad_mod
board/esp32_board/stl/: board.STL
catkin_ws/: .gitignore  camera_calibration_data_640_480.yaml  camera_calibration_settings.xml
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/slon/: CMakeLists.txt  package.xml
catkin_ws/src/slon/include/: aruco_samples_utility.hpp
catkin_ws/src/slon/launch/: main.launch
catkin_ws/src/slon/msg/: bt.msg  gps.msg  motors.msg  qrcode.msg
catkin_ws/src/slon/src/: camera.cpp  camera_calibration.cpp  camera_detection.cpp  main.cpp
catkin_ws/src/slon/test/: main.cpp
esp32/slon/: .gitignore  platformio.ini
esp32/slon/include/: AIR_HORN.h  bluetooth.h  compass.h  gps.h  motors.h  proc.h  proc_bt.h  sprayer.h  structs.h  types.h
esp32/slon/lib/DFRobot_QMC5883/: DFRobot_QMC5883.cpp  DFRobot_QMC5883.h
esp32/slon/lib/HMC5883L/: HMC5883L.cpp  HMC5883L.h
esp32/slon/lib/TETRIX_PRIZM/: PRIZM.cpp
esp32/slon/lib/TinyGPSPlus/: README.md  keywords.txt
esp32/slon/lib/TinyGPSPlus/examples/BasicExample/: BasicExample.ino
esp32/slon/lib/TinyGPSPlus/examples/DeviceExample/: DeviceExample.ino
esp32/slon/lib/TinyGPSPlus/examples/FullExample/: FullExample.ino
esp32/slon/lib/TinyGPSPlus/examples/KitchenSink/: KitchenSink.ino
esp32/slon/lib/TinyGPSPlus/src/: TinyGPS++.h
esp32/slon/lib/ros_lib/: ros.h
esp32/slon/lib/ros_lib/slon/: bt.h  gps.h  motors.h
esp32/slon/src/: main.cpp
(+15 files in other folders)
